@@ -1,3 +1,7 @@
+drkns 14.05.2017 20:32:53 +0000 - build 4960
+
+1. Уточнение 4957.
+
 drkns 14.05.2017 20:09:37 +0000 - build 4959
 
 1. Расширим немного Adapter API:
